// Vitest Snapshot v1

exports[`creates a valid router context > context 1`] = `
{
  "adapter": {
    "resolveComponent": [Function],
    "swapDialog": [Function],
    "swapView": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "hooks": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "state": {},
  "url": "https://localhost/",
  "version": "123",
  "view": {
    "component": "my-owo-view",
    "properties": {
      "foo": "bar",
    },
  },
}
`;

exports[`updates the context > base context 1`] = `
{
  "adapter": {
    "resolveComponent": [Function],
    "swapDialog": [Function],
    "swapView": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "hooks": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "state": {},
  "url": "https://localhost/",
  "version": "abc123",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;

exports[`updates the context > updated context 1`] = `
{
  "adapter": {
    "resolveComponent": [Function],
    "swapDialog": [Function],
    "swapView": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "hooks": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "state": {},
  "url": "https://localhost/foo/bar",
  "version": "new-version-string",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;

exports[`updates the context > updated context with dialog 1`] = `
{
  "adapter": {
    "resolveComponent": [Function],
    "swapDialog": [Function],
    "swapView": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "dialog": {
    "baseUrl": "https://base.test",
    "component": "some.dialog",
    "properties": {
      "foo": "bar",
    },
    "redirectUrl": "https://base.test/dialog",
  },
  "hooks": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "state": {},
  "url": "https://localhost/foo/bar/dialog",
  "version": "new-version-string",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;

exports[`updates the context > updated context with no dialog 1`] = `
{
  "adapter": {
    "resolveComponent": [Function],
    "swapDialog": [Function],
    "swapView": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "axios": [Function],
  "dialog": undefined,
  "hooks": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "state": {},
  "url": "https://localhost/foo",
  "version": "new-version-string",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;
